--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<!-- og -->
 	<meta property="og:title" content="오픈그래피 연습">
 	<meta property="og:description" content="안소영 오픈그래피 연습으로 깃허브를 통해 확인할겁니다.">
-	<meta property="og:image" content="https://youngsoan.github.io/OpenGraph/image/code.png">
+	<meta property="og:image" content="https://youngsoan.github.io/OpenGraph/images/sos.jpeg">
 	<meta property="og:url" content="https://youngsoan.github.io/OpenGraph">
 </head>
 
