index.html 문서 외부링크 수정

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 	<h1>Open Graph 연습</h1>
-	<strong><a href="https://ogp.me/">The open Graph protocol</a></strong>
+	<strong><a href="https://ogp.me/" target="_blank">The open Graph protocol</a></strong>
 	<ul>
 		<li>og:title</li>
 		<li>og:description</li>
