--- a/230419/vp.html
+++ b/230419/vp.html
@@ -16,7 +16,7 @@
 </head>
 <body>
   <h1>viewport가 있는 페이지</h1>
-  <img src="../images/damgom2.jpg" alt="img">
+  <img src="../images/so.jpg" alt="img">
   <strong>화면을 제어하는 메타태그로 기기의 보이는 영역을 기기의 실제 화면 크기로 변경하여 미디어쿼리가 기기의 화면 크기를 정확하게 감지할 수 있게 함</strong>
   <ul>
     <li>미디어쿼리 작성시 viewport값은 필수</li>
